--- a/Front/final-project/src/app/shared/components/filter/filter.component.html
+++ b/Front/final-project/src/app/shared/components/filter/filter.component.html
@@ -272,7 +272,7 @@
             </ul>
         </div>
         <div class="filter-box">
-            <h6 class="filter-title">
+            <h6 class="filter-title mb-0">
                 Filter by Price
             </h6>
             <div class="range-slider">
@@ -281,8 +281,8 @@
         </div>
         <button type="submit" class="btn btn-pink">Filter</button>
         <span class="price-range">Price:
-            <span>{{minValue}}</span>
-            <span> - {{maxValue}}</span>
+            <span>{{minValue}}₼</span>
+            <span> - {{maxValue}}₼</span>
         </span>
     </form>
 </div>
