--- a/Front/final-project/src/app/shared/components/pagination/pagination.component.html
+++ b/Front/final-project/src/app/shared/components/pagination/pagination.component.html
@@ -1,1 +1,22 @@
-<p>pagination works!</p>
+<ul>
+    <li>
+        <a href="#" class="active">1</a>
+    </li>
+    <li>
+        <a href="#">2</a>
+    </li>
+    <li>
+        <a href="#">3</a>
+    </li>
+    <li>
+        <a href="#">4</a>
+    </li>
+    <li>
+        <a href="#">5</a>
+    </li>
+    <li>
+        <a href="#">
+            <fa-icon [icon]="right"></fa-icon>
+        </a>
+    </li>
+</ul>
