--- a/Front/final-project/src/styles.scss
+++ b/Front/final-project/src/styles.scss
@@ -3,5 +3,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
 @import "~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
+@import "~@ng-select/ng-select/scss/material.theme.scss";
 @import "/src/assets/scss/variables";
 @import "/src/assets/scss/tools";
