--- a/Front/final-project/src/app/shared/components/filter/filter.component.scss
+++ b/Front/final-project/src/app/shared/components/filter/filter.component.scss
@@ -1,6 +1,6 @@
 @import "/src/assets/scss/variables";
 .title {
-  margin-bottom: 15px;
+  margin-bottom: 23px;
   span {
     margin-left: 10px;
     font-size: 16px;
@@ -131,6 +131,7 @@
       }
       .filter-color-area {
         flex-wrap: wrap;
+        margin-bottom: 20px;
         li {
           width: 16.666667%;
           .color-filter {
@@ -249,6 +250,7 @@
         .range-slider {
           margin-bottom: 20px;
           .ng5-slider {
+            margin: 20px 0 15px;
             .ng5-slider-bar {
               background: #f1f1f1;
               height: 6px;
@@ -294,6 +296,17 @@
     }
     .btn-pink {
       padding: 6px 20px !important;
+    }
+  }
+}
+@media only screen and(max-width:992px) {
+  .filter-area {
+    margin-bottom: 45px;
+  }
+  .filter-color-area {
+    li {
+      width: auto !important;
+      margin-right: 10px;
     }
   }
 }
