--- a/Admin/admin/src/styles.scss
+++ b/Admin/admin/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap.scss";
 @import "/src/assets/scss/sb-admin-2.scss";
+@import "~angular-notifier/styles.scss";
