--- a/Admin/admin/src/app/views/app/department/department.component.html
+++ b/Admin/admin/src/app/views/app/department/department.component.html
@@ -15,7 +15,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let department of departments">
+                    <tr
+                        *ngFor="let department of departments | paginate: { itemsPerPage: 10, currentPage: page,totalItems:totalCount }">
                         <td>{{department.icon}}</td>
                         <td>{{department.name}}</td>
                         <td>{{department.id}}</td>
@@ -39,6 +40,7 @@
             </table>
         </div>
     </div>
+    <pagination-controls (pageChange)="page = $event" previousLabel="Əvvəlki" nextLabel="Növbəti"></pagination-controls>
 </div>
 
 <!-- Button trigger modal -->
