Product CRUD backend created

--- a/Admin/admin/src/app/views/app/category/category.component.html
+++ b/Admin/admin/src/app/views/app/category/category.component.html
@@ -4,7 +4,7 @@
             <button class="btn btn-success" data-toggle="modal" data-target="#create">
                 Kateqoriya yarat
             </button>
-            <h4 class="text-center">Şöbələr</h4>
+            <h4 class="text-center">Kateqoriyalar</h4>
             <table class="table">
                 <thead>
                     <tr>
