--- a/Admin/admin/src/app/views/app/product/product.component.html
+++ b/Admin/admin/src/app/views/app/product/product.component.html
@@ -8,33 +8,32 @@
             <table class="table">
                 <thead>
                     <tr>
+                        <th>Şəkil</th>
                         <th>Adı</th>
                         <th>Id</th>
+                        <th>Sku</th>
                         <th>Status</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- <tr
-                        *ngFor="let product of products | paginate: { itemsPerPage: 10, currentPage: page,totalItems:totalCount }">
-                        <td>{{product.icon}}</td>
+                    <tr *ngFor="let product of products">
+                        <td class="img"><img src="{{product.photos[0].img}}" alt=""></td>
                         <td>{{product.name}}</td>
                         <td>{{product.id}}</td>
+                        <td>{{product.sku}}</td>
                         <td class="d-flex justify-content-between align-items-center">
-                            <span *ngIf="department.softDeleted" class="badge badge-danger">Deaktiv</span>
-                            <span *ngIf="!department.softDeleted" class="badge badge-success">Aktiv</span>
+                            <span *ngIf="product.softDeleted" class="badge badge-danger">Deaktiv</span>
+                            <span *ngIf="!product.softDeleted" class="badge badge-success">Aktiv</span>
                             <span class="settings">
-                                <a (click)="updateDepartment($event,department)" data-toggle="modal"
-                                    data-target="#update" class="btn btn-warning rounded-circle mr-3" href="#">
+                                <a data-target="#update" class="btn btn-warning rounded-circle mr-3" href="#">
                                     <i class="far fa-edit"></i>
                                 </a>
-                                <a (click)="removeDepartment($event,department.id)"
-                                    class="btn btn-danger rounded-circle" href="#">
+                                <a class="btn btn-danger rounded-circle" href="#">
                                     <i class="fas fa-trash"></i>
                                 </a>
                             </span>
-
                         </td>
-                    </tr> -->
+                    </tr>
                 </tbody>
             </table>
         </div>
